--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,20 +3,15 @@
 
 <table class="table table-responsiv table-responsive">
   <caption>
-    Produktliste
+    Forderungsliste
   </caption>
-  <thead>
-    <th scope="col"></th>
-    <th scope="col">Preis</th>
-    <th scope="col">Sterne</th>
-    <th scope="col">Produkt</th>
-  </thead>
   <tbody>
     {% for product in products %}
     <tr>
-      <td scope="row"><img src="{{ product.link_image }}" class="" /></td>
-      <td scope="row">€{{ product.price }}</td>
-      <td scope="row">{{ product.stars }}/5.0</td>
+      <td scope="row">
+        <img src="{{ product.link_image }}" class="img-fluid" />
+        <p class="font-weight-bold text-center">€ {{ product.price }}</p>
+      </td>
       <td scope="row">
         <a href="{{ product.link }}" target="_blank">{{ product.name }}</a>
       </td>
