Some stuff done

--- a/app/templates/error500.html
+++ b/app/templates/error500.html
@@ -1,3 +1,1 @@
-{% extends "base.html" %} {% block content %}
-<h1>Internal server error</h1>
-{% endblock %}
+{% extends "base.html" %} {% block content %} Bad stuff happened {% endblock %}
