--- a/app/templates/error404.html
+++ b/app/templates/error404.html
@@ -1,3 +1,1 @@
-{% extends "base.html" %} {% block content %}
-<h1>Page not found</h1>
-{% endblock %}
+{% extends "base.html" %} {% block content %} Not existing {% endblock %}
