--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,20 +7,12 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
       integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
       crossorigin="anonymous"
     />
-    <title>Winglers Liste</title>
-    <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename='custom.css') }}"
-    />
-  </head>
-  <body>
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
@@ -37,29 +29,10 @@
       crossorigin="anonymous"
     ></script>
 
-    <nav class="navbar navbar-expand-sm navbar-light bg-light">
-      <a class="navbar-brand" href="{{ url_for('index') }}">Winglers Liste</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto" id="navigation">
-          {% for item in navigation %}
-          <li class="nav-item">
-            <a class="nav-link" href="{{ url_for(item.0) }}">{{ item.1 }} </a>
-          </li>
-          {% endfor %}
-        </ul>
-      </div>
-    </nav>
+    <title>Winglers Liste</title>
+  </head>
+  <body>
+    {% include "navbar.html" %}
 
     <div id="content" class="container">
       <h1>{{ title }}</h1>
