--- a/app/templates/product_table.html
+++ b/app/templates/product_table.html
@@ -8,14 +8,18 @@
     <tr>
       <td scope="row">
         <img src="{{ product.link_image }}" class="img-fluid" />
-        <p class="font-weight-bold text-center">€ {{ product.price }}</p>
+        <p class="font-weight-bold text-center">
+          {{ "€%.2f"|format(product.price) }}{% if product.quantity > 1 %} x {{
+          product.quantity }}{% endif %}
+        </p>
       </td>
 
       <td scope="row">
         <p>
           Zweck:
-          <a href="{{ product.source_link }}">{{ product.source_name }}</a>,
-          Vorhanden seit: {{ product.lifetime_formatted }}
+          <a href="{{ product.source_link }}" target="_blank"
+            >{{ product.source_name }}</a
+          >, Vorhanden seit: {{ product.lifetime_formatted }}
         </p>
         <a href="{{ product.link }}" target="_blank">{{ product.name }}</a>
       </td>
