--- a/app/templates/timeline.html
+++ b/app/templates/timeline.html
@@ -5,13 +5,13 @@
   </div>
 	<div class="col mt-2">
 			<div class="btn-group btn-group-toggle" data-toggle="buttons">
-				<label class="btn btn-primary">
+				<label class="btn btn-secondary">
 				<input type="radio" id="buttonDay" name="timespan" autocomplete="off" checked>Tag</input>
 				</label>
-				<label class="btn btn-primary">
+				<label class="btn btn-secondary">
 				<input type="radio" id="buttonWeek" name="timespan" autocomplete="off">Woche</input>
 				</label>
-				<label class="btn btn-primary">
+				<label class="btn btn-secondary">
 				<input type="radio" id="buttonMonth" name="timespan" autocomplete="off">Monat</input>
 				</label>
 
