--- a/app/templates/product_table.html
+++ b/app/templates/product_table.html
@@ -7,7 +7,11 @@
     {% for product in products %}
     <tr>
       <td scope="row">
-        <img src="{{ product.link_image }}" class="img-fluid" />
+        <img
+          src="{{ product.link_image }}"
+          class="img-fluid"
+          alt="Produktbild"
+        />
         <p class="font-weight-bold text-center">
           {{ "€%.2f"|format(product.price) }}{% if product.quantity > 1 %} x {{
           product.quantity }}{% endif %}
