--- a/app/templates/error404.html
+++ b/app/templates/error404.html
@@ -1,1 +1,2 @@
-{% extends "base.html" %} {% block content %} Not existing {% endblock %}
+{% extends "base.html" %} {% block content %} Diese Seide konnte etzadla nicht
+gefunden werden {% endblock %}
