--- a/app/templates/error500.html
+++ b/app/templates/error500.html
@@ -1,1 +1,2 @@
-{% extends "base.html" %} {% block content %} Bad stuff happened {% endblock %}
+{% extends "base.html" %} {% block content %} Da wurde dem Server wohl heftig
+die Brügel neigschmissn {% endblock %}
