--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,3 +1,4 @@
+{% macro create_navbar(item_tuples) %}
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
   <a class="navbar-brand" href="{{ url_for('index') }}">Winglers Liste</a>
   <button
@@ -13,7 +14,7 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto" id="navigation">
-      {% for item in navigation %}
+      {% for item in item_tuples %}
       <li class="nav-item">
         <a class="nav-link" href="{{ url_for(item.0) }}">{{ item.1 }} </a>
       </li>
@@ -21,3 +22,4 @@
     </ul>
   </div>
 </nav>
+{% endmacro %}
