Added last change, added content hash

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,6 +4,10 @@
     <table class="table table-responsive">
       <tbody>
         <tr>
+          <th scope="row">Letze Änderung</th>
+          <td>{{ last_change_date }}</td>
+        </tr>
+        <tr>
           <th scope="row">Anzahl</th>
           <td>{{ product_count }}</td>
         </tr>
