Changed lifespan, removed nested tables

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %} {% block content %}
 <div class="row">
   <div class="col">
-    <table class="table table-responsive">
+    <table class="table table-responsive table-sm">
       <tbody>
         <tr>
           <th scope="row">Letze Änderung</th>
