--- a/app/templates/timeline.html
+++ b/app/templates/timeline.html
@@ -6,13 +6,13 @@
 	<div class="col mt-2">
 			<div class="btn-group btn-group-toggle" data-toggle="buttons">
 				<label class="btn btn-secondary">
-				<input type="radio" id="buttonDay" name="timespan" autocomplete="off" checked>Tag</input>
+				<input type="radio" id="buttonDay" name="timespan" autocomplete="off" checked>24 Stunden</input>
 				</label>
 				<label class="btn btn-secondary">
-				<input type="radio" id="buttonWeek" name="timespan" autocomplete="off">Woche</input>
+				<input type="radio" id="buttonWeek" name="timespan" autocomplete="off">7 Tage</input>
 				</label>
 				<label class="btn btn-secondary">
-				<input type="radio" id="buttonMonth" name="timespan" autocomplete="off">Monat</input>
+				<input type="radio" id="buttonMonth" name="timespan" autocomplete="off">4 Wochen</input>
 				</label>
 
 			</div>
