--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -36,8 +36,12 @@
     }}
 
     <div id="content" class="container">
-      <h1>{{ title }}</h1>
-      <p>{% block content %}{% endblock %}</p>
+      <div class="row my-3">
+        <div class="col">
+          <h1>{{ title }}</h1>
+        </div>
+      </div>
+      {% block content %}{% endblock %}
     </div>
   </body>
 </html>
