--- a/app/templates/product_table.html
+++ b/app/templates/product_table.html
@@ -1,32 +1,43 @@
 <table class="table table-responsive">
-  <caption>
-    Forderungsliste
-  </caption>
-
   <tbody>
     {% for product in products %}
     <tr>
-      <td>
+      <td rowspan="5">
         <img
           src="{{ product.link_image }}"
-          class="img-fluid"
+          class="img-responsive"
           alt="Produktbild"
         />
-        <p class="font-weight-bold text-center">
-          {{ "€%.02f"|format(product.price) }}{% if product.quantity > 1 %} x {{
-          product.quantity }}{% endif %}
-        </p>
       </td>
-
-      <td>
-        <p>
-          Zweck:
-          <a href="{{ product.source_link }}" target="_blank"
-            >{{ product.source_name }}</a
-          >, Vorhanden seit: {{ product.lifetime_formatted }}
-        </p>
+      <th colspan="2">
         <a href="{{ product.link }}" target="_blank">{{ product.name }}</a>
+      </th>
+    </tr>
+    <tr>
+      <th>Wert</th>
+      <td>
+        {{ "€%.02f"|format(product.price) }}{% if product.quantity > 1 %} x {{
+        product.quantity }}{% endif %}
       </td>
+    </tr>
+    <tr>
+      <th>Zweck</th>
+      <td>
+        <a href="{{ product.source_link }}" target="_blank"
+          >{{ product.source_name }}</a
+        >
+      </td>
+    </tr>
+    <tr>
+      <th>Zeitspanne</th>
+      <td>
+        {{ product.birth }} - {% if product.death %} {{ product.death }} {% else
+        %}Jetzt{% endif %}
+      </td>
+    </tr>
+    <tr>
+      <th>Lebensdauer</th>
+      <td>{{ product.lifetime }}</td>
     </tr>
     {% endfor %}
   </tbody>
