Working on push

--- a/app/templates/notification.html
+++ b/app/templates/notification.html
@@ -1,4 +1,9 @@
-<button class="btn btn-secondary" onClick="requestPush()">
+<script src="{{ url_for('static', filename='notification.js') }}" }></script>
+
+<script>
+  handleNotificationWorker("{{ url_for('api_notification_worker') }}");
+</script>
+
+<button class="btn btn-secondary" onClick="subscribeUser()">
   &#128276; Aktiviere Notifications
 </button>
-<script src="{{ url_for('static', filename='notification.js') }}" }></script>
