--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,8 +1,9 @@
 {% macro create_navbar(item_tuples) %}
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+<nav class="navbar sticky-top navbar-expand-sm navbar-dark bg-dark">
   <a class="navbar-brand" href="{{ url_for('index') }}">Winglers Liste</a>
+
   <button
-    class="navbar-toggler"
+    class="navbar-toggler ml-auto"
     type="button"
     data-toggle="collapse"
     data-target="#navbarSupportedContent"
@@ -12,13 +13,36 @@
   >
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto" id="navigation">
+
+  <div class="navbar-header ml-2 d-block d-sm-none">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <button class="btn btn-secondary" onClick="subscribeUser()">
+          &#128276;
+        </button>
+      </li>
+    </ul>
+  </div>
+
+  <div
+    class="collapse navbar-collapse float-left mr-auto"
+    id="navbarSupportedContent"
+  >
+    <ul class="navbar-nav" id="navigation">
       {% for item in item_tuples %}
       <li class="nav-item">
         <a class="nav-link" href="{{ url_for(item.0) }}">{{ item.1 }} </a>
       </li>
       {% endfor %}
+    </ul>
+  </div>
+  <div class="navbar-header mr-auto mr-2 d-none d-sm-block">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <button class="btn btn-secondary" onClick="subscribeUser()">
+          &#128276;
+        </button>
+      </li>
     </ul>
   </div>
 </nav>
