--- a/app/templates/archive.html
+++ b/app/templates/archive.html
@@ -2,8 +2,8 @@
 <div class="row">
   <div class="col">{% include "product_table.html" %}</div>
 </div>
-<div class="row">
-  <div class="col">
+<div class="row my-4">
+  <div class="col text-center">
     {% from "pagination.html" import create_pagination %} {{
     create_pagination(pagination) }}
   </div>
