--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -2,8 +2,18 @@
 <nav class="navbar sticky-top navbar-expand-sm navbar-dark bg-dark">
   <a class="navbar-brand" href="{{ url_for('index') }}">Winglers Liste</a>
 
+  <div class="navbar-header ml-auto d-block d-sm-none">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <button class="btn btn-secondary" onClick="subscribeUser()">
+          &#128276;
+        </button>
+      </li>
+    </ul>
+  </div>
+
   <button
-    class="navbar-toggler ml-auto"
+    class="navbar-toggler ml-2"
     type="button"
     data-toggle="collapse"
     data-target="#navbarSupportedContent"
@@ -13,16 +23,6 @@
   >
     <span class="navbar-toggler-icon"></span>
   </button>
-
-  <div class="navbar-header ml-2 d-block d-sm-none">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <button class="btn btn-secondary" onClick="subscribeUser()">
-          &#128276;
-        </button>
-      </li>
-    </ul>
-  </div>
 
   <div
     class="collapse navbar-collapse float-left mr-auto"
