--- a/app/templates/product_table.html
+++ b/app/templates/product_table.html
@@ -1,4 +1,4 @@
-<table class="table table-responsive">
+<table class="table table-responsive table-sm">
   <tbody>
     {% for product in products %}
     <tr>
